# autoware_lidar_centerpoint

./: .env  .gitattributes  .repos  README.md
.github/: docker-ros.yml
.github/workflows/: consistency.yml  docker-ros.yml
autoware_lidar_centerpoint/: CMakeLists.txt  package.xml
autoware_lidar_centerpoint/include/autoware/lidar_centerpoint/: node.hpp  ros_utils.hpp
autoware_lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
autoware_lidar_centerpoint/lib/: ros_utils.cpp
autoware_lidar_centerpoint/models/: pts_voxel_encoder_centerpoint_tiny.onnx
autoware_lidar_centerpoint/models/centerpoint_tiny/: pts_backbone_neck_head_centerpoint_tiny.onnx
autoware_lidar_centerpoint/src/: node.cpp
autoware_lidar_centerpoint/test/: test_ros_utils.cpp
docker/: custom.sh
ros2_demo_package/: CMakeLists.txt  README.md  package.xml
ros2_demo_package/include/ros2_demo_package/: ros2_demo_node.hpp
ros2_demo_package/launch/: ros2_demo_node_launch.py
ros2_demo_package/src/: ros2_demo_node.cpp
ros2_demo_package_interfaces/: CMakeLists.txt  README.md  package.xml
