<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ros2_demo_package</name>
  <version>0.0.1</version>
  <description>ROS 2 demo package</description>

  <maintainer email="demo@mail.com">Demo Maintainer</maintainer>
  <author email="demo@mail.com">Demo Author</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>
  <depend>ros2_demo_package_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
